# smartop

./: .gitignore
src/dbagent/: CMakeLists.txt  main.cc
src/libs/libzdb/: libzdb.la  libzdb.so.13.1.0
src/spdlog_dyn/: CMakeLists.txt  README.md  main.cpp
src/spdlog_dyn/spdlog/include/spdlog/sinks/: daily_file_sink.h
test/cpp/libzdb/: go  main.cc  makefile
test/cpp/spdlog/: CMakeLists.txt  go  main.cpp
web/: .gitattributes  .gitignore  404.html  README.md  auto_install.json  composer.json
web/app/: BaseController.php  Request.php  common.php  event.php  middleware.php  provider.php
web/app/api/: middleware.php
web/app/api/config/: cache.php  route.php
web/app/api/route/: api.php
web/app/backend/: common.php  middleware.php
web/app/backend/controller/: Addon.php  Ajax.php  Error.php  Index.php  Login.php
web/app/backend/lang/: zh-cn.php
web/app/backend/middleware/: CheckRole.php  SystemLog.php  ViewNode.php
web/app/backend/model/: Admin.php  AdminLog.php  AttachGroup.php  AuthGroup.php  AuthRule.php  BackendModel.php  Member.php  MemberGroup.php  MemberLevel.php
web/app/backend/service/: AddonService.php  AuthService.php
web/app/backend/validate/: TestCate.php
web/app/common/annotation/: ControllerAnnotation.php  NodeAnotation.php
web/app/common/controller/: Backend.php  Frontend.php
web/app/common/middleware/: Install.php
web/app/common/model/: Addon.php  Attach.php  BaseModel.php  Blacklist.php  Config.php  ConfigGroup.php  FieldType.php  FieldVerify.php  Languages.php  Member.php  Provinces.php
web/app/common/service/: AbstractService.php  AdminLogService.php  AuthCloudService.php  OssService.php  PredisService.php  UploadService.php
web/app/common/traits/: Curd.php  Jump.php
web/app/common/validate/: MemberValidate.php
web/app/curd/controller/: Index.php  Table.php
web/app/curd/lang/: zh-cn.php
web/app/curd/model/: Curd.php
web/app/curd/validate/: Table.php
web/app/frontend/: middleware.php
web/app/frontend/controller/: Ajax.php  Index.php  Login.php  Member.php
web/app/frontend/lang/: zh-cn.php
web/app/frontend/middleware/: ViewNode.php
web/app/frontend/route/: route.php
web/app/frontend/validate/: MemberValidate.php
web/app/install/: funadmin.sql
web/app/install/controller/: Index.php
web/app/resource/controller/: Database.php  DatabaseList.php  Device.php  Resource.php
web/app/resource/model/: Database.php  DatabaseList.php  Device.php  Resource.php
web/app/resource/validate/: Database.php  DatabaseList.php  Device.php  (+1 more)
web/config/: annotation.php  api.php  app.php  captcha.php  console.php  database.php  filesystem.php  funadmin.php  lang.php  queue.php  route.php  session.php  throttle.php  view.php
web/public/: .gitignore  .htaccess  index.php  install.php  router.php
web/public/static/: backend-build.js  frontend-build.js  require.js
(+227 files in other folders)
